arreglo warning